# BatteryMonitorAcceleratus

./: .gitignore  BatteryStatus.cpp  BatteryStatus.h  CMakeLists.txt  Main.cpp  MemoryStatus.cpp  MemoryStatus.h  NotificationWindow.cpp  NotificationWindow.h  batterystat.cpp  batterystat.h  main.cpp
